<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DateRight</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity Strings -->
    <string name="dateRight">Date Right</string>
    <string name="search">Search</string>
    <string name="searchInput">Find a Date Plan</string>
    <string name="random">Get A Random Date</string>
    <string name="randomName">Random Date Name</string>
    <string name="randomTime">Random Date Time Created</string>
    <string name="randomDesc">Random Date Description</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email:</string>
    <string name="pass">Password:</string>
    <string name="logoDescription">Logo</string>
    <string name="username">Username:</string>
    <string name="createAccount">Create Account</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="securityQuestion">Security Question: What is your mothers maiden name?</string>
    <string name="title_activity_display_random">Here\'s A Random Activity</string>
    <string name="title_activity_guest_search">Guest Search</string>
    <string name="title_activity_user_search">UserSearchActivity</string>

    <!-- User Search Strings -->
    <string name="viewProfile">View Profile</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

    <!-- User Profile Strings -->
    <string name="profile">Profile:</string>
    <string name="sex">Sex:</string>
    <string name="datePlans">Date Plans:</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_date_plan">DatePlanActivity</string>
    
    <!-- Date Plan -->
    <string name="name">Name:</string>
    <string name="time">Time:</string>
    <string name="desc">Description:</string>
    
    <!-- Menu -->
    <string name="profileMenuItem">Profile</string>

</resources>
