<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cse3345.dateright.MainActivity" 
    android:orientation="vertical"
    >
    
    <!-- LOGO -->
    
    <ImageView
        android:src="@drawable/logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logoDescription"
        />
    
	<!-- TITLE -->
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateRight" 
        android:gravity="center"/>
    
    <!-- EMAIL INPUT LINE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" 
        />
        <EditText
        android:id="@+id/loginInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_weight="1"
        />
    </LinearLayout>
    
    <!-- PASSWORD INPUT LINE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass" 
        />
        <EditText
        android:id="@+id/loginInputPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_weight="1"
        />
    </LinearLayout>
    
    <!-- LOGIN BUTTON -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" 
        />
    </LinearLayout>
    
    <!-- RANDOM DATE PLAN ACTIVITY -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
	    <Button
	        android:id="@+id/randomButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/random" 
	        />
	</LinearLayout>

</LinearLayout>
