<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cse3345.dateright.UserProfileActivity" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile" />
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/username"
	        />
        <TextView
            android:id="@+id/userNameText"
            android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="right"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email"
	        />
        <TextView
            android:id="@+id/emailText"
            android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="right"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/firstName"
	        />
        <TextView
            android:id="@+id/firstNameText"
            android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="right"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lastName"
	        />
        <TextView
            android:id="@+id/lastNameText"
            android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="right"
            />
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datePlans" />

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
	    <TextView
	        android:id="@+id/results"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="" />
	    <ListView
	        android:id="@+id/list"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent" 
	        >
	    </ListView>
    </RelativeLayout>
</LinearLayout>
